# SampleProject-gtest

./: .bash_history  .gitignore  CMakeLists.txt  Dockerfile  README.md  clean-this.sh  do-build-src.sh  main.cpp  rebuild.sh  run-unit-tests.sh
include/: dev_debug.h  hello-world.h  hello-world.hpp
src/: hello-world.c  hello-world.cpp
test/: CMakeLists.txt  sample-test.cpp
